# Chiru

./: .gitignore  Cargo.toml  README.md  README.zh-Hans.md  README.zh-Hant.md  ast.html  foo.html  parser.html  syntaxis.html
examples/array_init/: Cargo.toml
examples/array_init/src/: array_init.chiru  main.rs
src/: lib.rs  main.rs
src/examples/: mod.rs
src/examples/dot/: dot_listener.rs  dot_parser.rs  dot_visitor.rs  mod.rs
src/examples/expr/: expr_listener.rs  expr_parser.rs  expr_visitor.rs  mod.rs
src/runtime/: error.rs  lexer.rs  lexer_rule.rs  ll1_analyzer.rs  location.rs  mod.rs  parser.rs  position.rs  production.rs  token.rs  token_stream.rs  vocabulary.rs
src/runtime/ast/: ast_context.rs  error_context.rs  mod.rs  rule_context.rs  terminal_context.rs  to_rule.rs
src/runtime/error_strategy/: error_listener.rs  error_strategy.rs
src/syntaxis/: ast.rs  back.rs  listener.rs  mod.rs  to_any.rs  token.rs  token_stream.rs  visitor.rs  vocabulary.rs
src/tool/: ast.json  mod.rs  syntaxis.g4
tests/: first_set_test.rs  follow_set_test.rs  foo.rs  foo_dump.rs  foo_test.rs  generate_test.rs  grammar_test.rs  lexer_gen.rs  lexer_gen_test.rs  lexer_test.rs  ll1_table_test.rs  load_ast.rs  load_ast_and_draw.rs  load_ast_and_draw_test.rs  parser_test.rs  rust_test.rs  tera_test.rs  token_stream_test.rs
tests/ast_loader/: mod.rs
tests/foo/: foo_context.rs  foo_listener.rs  foo_parser.rs  foo_visitor.rs  foo_walker.rs  mod.rs
tests/generate/: chiru_context.rs  chiru_lexer.rs  chiru_listener.rs  chiru_parser.rs  chiru_visitor.rs  chiru_walker.rs  context.rs  lexer.rs  listener.rs  mod.rs  parser.rs  visitor.rs
tests/lexer_generate/: ast.json  lexer.rs
(+78 files in other folders)
