[package]
name = "chiru"
version = "0.1.0"
edition = "2021"
author = "邱维东 <qiu_weidong@buaa.edu.cn>"
about = "A parser generator similar to antlr4."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["derive"]}
lazy_static = "1.4.0"
maplit = "1.0.2"
regex = "1.7.1"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
tera = { version = "1", default-features = false }
